k8s/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cicd-k8s-demo-canary
spec:
  selector:
    app: spring-cicd-k8s-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
