k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cicd-k8s-demo
spec:
  selector:
    app: spring-cicd-k8s-demo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
